components/mini/MiniView.module.css
.container {
  background-color: black;
  width: 128px;
  min-width: 128px;
  height: 206px;
  padding: 15px 5px 0px 0px;
}

.background {
  height: 160px;
  background-image: url("/images/pieceMiniBackgroundMoblie.svg");
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.background img {
  height: 118px;
}

.pieceInfo {
  height: 46px;
}

.pieceName {
  font-size: 10px;
  color: white;
  padding-top: 2px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.artist {
  font-size: 10px;
  color: grey;
  padding-top: 2px;
}

.distance {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  font-size: 10px;
  align-items: center;
  color: #42ff60;
  padding-top: 2px;
}

.distance img {
  width: 10px;
  height: 10px;
}

.distance p {
  margin: 0px;
  padding-left: 3px;
}

/* Desktop Styles */

.desktopContainer {
  background-color: black;
  width: 281px;
  height: 400px;
  padding: 16px 6px 0px 6px;
  cursor: pointer;
}

.desktopBackground {
  width: 281px;
  height: 340px;
  background-image: url("/images/miniBackgroundDesktop.svg");
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.desktopBackground img {
  height: 259px;
}

.timer {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin: 0px;
}

.timer p {
  color: grey;
  font-size: 13px;
  padding-left: 10px;
  margin: 0px;
  padding-top: 3px;
}

.desktopPieceName {
  font-size: 13px;
  color: white;
  padding-top: 14px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.desktopArtist {
  font-size: 13px;
  color: grey;
  padding-top: 4px;
}

.desktopDistance {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  font-size: 13px;
  align-items: center;
  color: #42ff60;
  padding-top: 4px;
}

.desktopDistance img {
  width: 10px;
  height: 10px;
}

.desktopDistance p {
  margin: 0px;
  padding-left: 3px;
}

.price {
  color: white;
  font-size: 13px;
  padding-top: 20px;
}

.pieceInfo {
  height: 46px;
}

